[gd_scene load_steps=4 format=3 uid="uid://cnoptrtrpatkm"]

[ext_resource type="Script" path="res://assets/scripts/player.gd" id="1_to2an"]
[ext_resource type="PackedScene" uid="uid://bq7cyxsc587rd" path="res://scenes/scenes for instantiating/Joystick.tscn" id="2_4emp1"]
[ext_resource type="PackedScene" uid="uid://c817w1plbub6k" path="res://scenes/scenes for instantiating/Arrow buttons.tscn" id="3_1hvml"]

[node name="Player" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.769421, 0)
script = ExtResource("1_to2an")

[node name="Spatial" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Spatial"]

[node name="CanvasLayer" type="CanvasLayer" parent="Spatial"]

[node name="Joystick" parent="Spatial/CanvasLayer" instance=ExtResource("2_4emp1")]

[node name="ArrowButtons" parent="Spatial/CanvasLayer" instance=ExtResource("3_1hvml")]

[node name="hide" type="Button" parent="Spatial/CanvasLayer"]
offset_right = 259.0
offset_bottom = 70.0
text = "Hide Joystick and arrow buttons "

[node name="show" type="Button" parent="Spatial/CanvasLayer"]
offset_left = 2.0
offset_top = 87.0
offset_right = 258.0
offset_bottom = 152.0
text = "Show Joystick and arrow buttons"

[connection signal="pressed" from="Spatial/CanvasLayer/hide" to="." method="_on_hide_pressed"]
[connection signal="pressed" from="Spatial/CanvasLayer/show" to="." method="_on_show_pressed"]
